fix column dragging on IE and Edge

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -164,3 +164,10 @@ body{
 .addRowButton:hover{
     opacity: 1;
 }
+#menu-container{
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    user-select: none;
+}
